--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,4 +22,9 @@
 	<string name="prefs_title">Autolycus Preferences</string>
 	<string name="shortcut_title">Create a Shortcut</string>
 	
+	<string name="pref_clear">Clear Cache</string>
+	<string name="pref_clear_suc">Cache successfully deleted.</string>
+	<string name="pref_clear_fail">Cache deletion was unsuccessful.</string>
+	<string name="pref_clear_gone">Cache not found.</string>
+	
 </resources>
