Show "Delayed" in red if the bus is delayed
Untested, couldn't find any delayed buses right now

--- a/TODO
+++ b/TODO
@@ -2,6 +2,6 @@ After release:
 - Finish Javadoc-ing
 - Add 'View Map' to prediction context menu
 - Integrate service bulletins
-- Add UI for delayed buses
 - Transparent icon for home screen?
 - REMOVE UGLY HACK for mta's East+bound/Eastbound confusion when they fix their stuff
+- proper way of collapsing old predictions
