--- a/TODO
+++ b/TODO
@@ -1,7 +1,13 @@
+Before Release:
+- Make 'delay' update over time
+
 After release:
 - Finish Javadoc-ing
 - Add 'View Map' to prediction context menu
 - Integrate service bulletins
 - Transparent icon for home screen?
 - REMOVE UGLY HACK for mta's East+bound/Eastbound confusion when they fix their stuff
-- proper way of collapsing old predictions
+- Proper way of collapsing old predictions
+- Change AsyncTask to AsyncQueryHandler where appriorite
+- Use https://code.google.com/p/zippy-android/source/browse/trunk/examples/SharedPreferencesCompat.java
+- Use reflection + strictmode, test in gingerbread emulator (perhaps goo.gl/UXzAj may apply)
