Add all functionality for service predictions
Just need to work on UI, and potentially change to dima's idea of using
tabs

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 After release:
 - Finish Javadoc-ing
 - Add 'View Map' to prediction context menu
-- Integrate service bulletins
+- Fix up UI for service bulletins
 - Transparent icon for home screen?
 - REMOVE UGLY HACK for mta's East+bound/Eastbound confusion when they fix their stuff
 - Change AsyncTask to AsyncQueryHandler where appriorite
