--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,8 +32,8 @@
 	
 	<string name="about_title">About Autolycus</string>
 	<string name="about_copyrights">Copyright 2010 Joseph Booker. Original bus icon from CKSInfo.com, heavily modified by Dmitriy Vysotskiy. Available under the GPLv3 at https://github.com/sargas/autolycus</string>
-	<string name="about_help">To use: From the home screen, press the Menu button. Choose \'Add\', and then choose the option to add \'Shortcuts\'. Autolycus Bus Predictions should be among the choices. Use folders in the home screen to organize multiple bus stops.</string>
-	
+	<string name="about_help">Alternative use: From the home screen, press the Menu button. Choose \'Add\', and then choose the option to add \'Shortcuts\'. Autolycus Bus Predictions should be among the choices. Use folders in the home screen to organize multiple bus stops.</string>
+	<string name="about_button">Add Shortcut</string>
 	<string name="predictionview_delayed">Delayed</string>
 	
 	<string name="prediction_details_title">Details</string>
